@@ -1,3 +1,8 @@
+Tue Mar 17 10:05:23 CET 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
+	* src/odbc/unittests/genparams.c src/odbc/unittests/moreandcount.c:
+	* src/odbc/unittests/typeinfo.c:
+	- relax some tests
+
 Mon Mar 16 21:46:05 CET 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
 	* win32/tds_sysdep_public.h:
 	- fix redefinition (due to change on Fri Feb 27 11:46:15 CET 2009)
@@ -1409,4 +1414,4 @@ Wed Jan  9 19:54:43 EST 2008	JK Lowden <jklowden@freetds.org>
 	* ChangeLog  truncated because of release
 	* ChangeLog-0.82 added because of release
 	
-$Id: ChangeLog,v 1.2751 2009/03/16 20:46:20 freddy77 Exp $
+$Id: ChangeLog,v 1.2752 2009/03/17 09:05:47 freddy77 Exp $
